--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "sgtbimit",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
