--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "xlsx": "^0.18.5"
   }
 }
